--- a/task/templates/task/menu.html
+++ b/task/templates/task/menu.html
@@ -9,16 +9,16 @@
     <table>
         <caption>Меню</caption>
             <tr>
-                <th>Пункт 1</th>
+                <th>Пункт первый</th>
             </tr>
             <tr>
-                <th>Пункт 2</th>
+                <th>Пункт второй</th>
             </tr>
             <tr>
-                <th>Пункт 3</th>
+                <th>Пункт третий</th>
             </tr>
             <tr>
-                <th>Пункт 4</th>
+                <th>Пункт четвёртый</th>
             </tr>
     </table>
 </body>
